force-app/main/default/objects/Responsibility_Points__c.object
<CustomObject>
    <fields>
        <fullName>Additional_Conditions__c</fullName>
        <inlineHelpText>To be used to include additional text at the end of the agreement. If the text to be included is a new clause, it should start with &quot;6. &quot;</inlineHelpText>
        <label>Additional Conditions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Copy_Review_Date__c</fullName>
        <formula>IF(TEXT(Review_Date__c)=&quot;&quot;,&quot;&quot;,&quot;Review Date: &quot;&amp;TEXT(DAY(  Review_Date__c  )) + &quot;/&quot; + 
TEXT(MONTH(Review_Date__c)) + &quot;/&quot; + 
RIGHT(TEXT(YEAR(Review_Date__c)),4))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy Review Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copy_Text_Cost__c</fullName>
        <formula>IF( 
 Total_Cost__c &gt;= 1000000, 
TEXT(FLOOR( Total_Cost__c  / 1000000)) &amp; &quot;,&quot;, 
&quot;&quot;) &amp; 
IF( 
 Total_Cost__c &gt;= 1000, 
RIGHT(TEXT(FLOOR( Total_Cost__c  / 1000)), 3) &amp; &quot;,&quot;, 
&quot;&quot;) &amp; 
RIGHT(TEXT(FLOOR( Total_Cost__c )), 3) &amp; &quot;.&quot; &amp; 
IF( 
MOD( Total_Cost__c  , 1) * 100 &lt; 10, 
&quot;0&quot; &amp; TEXT(ROUND(MOD( Total_Cost__c  , 1), 2) * 100), 
TEXT(MIN(ROUND(MOD( Total_Cost__c  , 1), 2) * 100, 99)) 
) 

&amp;&quot; &quot;&amp; TEXT(CurrencyIsoCode)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy Text Cost</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copy_Text_Responsible_for__c</fullName>
        <formula>IF(Responsible_for__c =&quot;&quot;,&quot;.&quot;,&quot;, responsible for  &quot;&amp; Responsible_for__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy Text Responsible for</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copy_Text_Start_Date__c</fullName>
        <formula>TEXT(DAY(  Start_Date__c )) + &quot;/&quot; + 
TEXT(MONTH(Start_Date__c )) + &quot;/&quot; + 
RIGHT(TEXT(YEAR(Start_Date__c )),4)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy Text Start Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Expired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_ID_18_Char__c</fullName>
        <description>The ID of the record in the alternate SFDC org, where applicable.</description>
        <externalId>true</externalId>
        <label>External ID (18 Char)</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Gross_Net__c</fullName>
        <label>Gross/Net</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gross</fullName>
                    <default>true</default>
                    <label>Gross</label>
                </value>
                <value>
                    <fullName>Net</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Line_Manager__c</fullName>
        <formula>Staff_Member__r.Line_Manager__r.FirstName &amp;&quot; &quot;&amp; Staff_Member__r.Line_Manager__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Line Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Points__c</fullName>
        <label>Points</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Responsibility_Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Responsible_for__c</fullName>
        <label>Responsible for:</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Review_Date__c</fullName>
        <label>Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>S_Doc_Template_ID__c</fullName>
        <formula>IF(
   School__c = &quot;The International School of Moscow&quot;,
   &quot;a0t6F00000NP2EY&quot;,
   &quot;a0t6F00000NP2Ex&quot;
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>S_Doc Template ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_Section__c</fullName>
        <formula>TEXT(Staff_Member__r.School_Section__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>School Section</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School__c</fullName>
        <formula>TEXT(Staff_Member__r.Owner.School__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>School</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Staff_Member_Name__c</fullName>
        <formula>IF(
   ISBLANK( Staff_Member__r.PersonContact.Full_Name_on_Passport_Official_ID__c ),
   Staff_Member__r.FirstName &amp;&quot; &quot;&amp; Staff_Member__r.LastName,
   Staff_Member__r.PersonContact.Full_Name_on_Passport_Official_ID__c
   )</formula>
        <label>Staff Member Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Staff_Member__c</fullName>
        <label>Staff Member</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Responsibility Points</relationshipLabel>
        <relationshipName>Responsibility_Points</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Started__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Started</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>IF(
   Staff_Member__r.Status__c &lt;&gt;&quot;Employed&quot;,
   &quot;Not Active&quot;,
   IF(
      Start_Date__c&gt;Today(),
      &quot;Not Active&quot;,
      IF(
         End_Date__c = NULL,
         &quot;Active&quot;,
          IF(
             AND(
                 End_Date__c &gt;TODAY(),
                 Start_Date__c&lt;=Today()
                 ),
                 &quot;Active&quot;,
                 &quot;Not Active&quot;
             )
         )
     )
 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Cost__c</fullName>
        <label>Total Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Responsibility Point</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Responsible_for__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Points__c</columns>
        <columns>Total_Cost__c</columns>
        <columns>Staff_Member__c</columns>
        <columns>School__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RP-{0000}</displayFormat>
        <label>Record #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Responsibility Points</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Start_Date_Greater_than_End_Date</fullName>
        <active>true</active>
        <errorConditionFormula>AND(TEXT(End_Date__c)&lt;&gt;&quot;&quot;,Start_Date__c &gt; End_Date__c )</errorConditionFormula>
        <errorDisplayField>Start_Date__c</errorDisplayField>
        <errorMessage>Start Date cannot be later than End Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Start_Date_Required</fullName>
        <active>true</active>
        <errorConditionFormula>TEXT(Start_Date__c) =&quot;&quot;</errorConditionFormula>
        <errorDisplayField>Start_Date__c</errorDisplayField>
        <errorMessage>A Start Date is Required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Title_Required</fullName>
        <active>true</active>
        <errorConditionFormula>Responsibility_Title__c =&quot;&quot;</errorConditionFormula>
        <errorDisplayField>Responsibility_Title__c</errorDisplayField>
        <errorMessage>You must provide a title to the Responsabiilty</errorMessage>
    </validationRules>
</CustomObject>